background color and align thumbnails fix

--- a/Lil-Peep/src/styles/modules/pdp.scss
+++ b/Lil-Peep/src/styles/modules/pdp.scss
@@ -1,64 +1,37 @@
-.a {
+.product-container {
+  background-color: #f7f8f9;
+  flex-direction: column;
+  height: 500px;
 
-  @media only screen and (min-width:768px) {
+  @media #{$breakpoint-tablet} {
+    align-items: center;
     display: flex;
+    flex-direction: row;
   }
 }
 
 .half-left {
-
   display: flex;
   justify-content: center;
 
-  @media only screen and (min-width:768px) {
-    display: inline-block;
-    margin-right: 1px;
-    width: 45%;
+  @media #{$breakpoint-tablet} {
+    align-items: center;
+    display: flex;
+    height: 100%;
+    width: 50%;
   }
 }
-
-.history {
-
-  .next {
-    display: none;
-
-    @media only screen and (min-width:768px) {
-      color: #5396e5;
-      display: inline-block;
-      font-family: 'Lato', sans-serif;
-      height: 10px;
-      text-decoration: none;
-      font-size: 16px;
-      outline: none;
-    }
-  }
-
-  .selection {
-
-    @media only screen and (min-width:768px) {
-      color: #72808c;
-      font-family: 'Lato', sans-serif;
-    }
-  }
-
-  @media only screen and (min-width:768px) {
-    color: #72808c;
-    font-family: 'Lato', sans-serif;
-  }
-}
-
-
 
 .super-product {
-  display: flex;
-  justify-content: center;
   align-items: center;
+  display: flex;
   flex-direction: column;
+  justify-content: center;
 
   .box-product {
     display: flex;
-    justify-content: center;
     height: 300px;
+    justify-content: center;
     width: 100%;
 
     .product {
@@ -66,87 +39,75 @@
       justify-content: center;
       object-fit: contain;
       width: 100%;
-
-      @media only screen and (min-width:768px) {
-        height: 100%;
-        object-fit: contain;
-        width: 100%;
-      }
     }
 
-    @media only screen and (min-width:768px) {
-      height: 550px;
-      position: relative;
-      width: 550px;
+    @media #{$breakpoint-tablet} {
+      width: 100%;
     }
   }
 
   .box-micro {
     display: flex;
-    float: center;
     justify-content: center;
+    padding-top: 25px;
     width: 70%;
-    margin-top: 25px;
 
     a {
-
+      height: 85px;
       margin-right: 20px;
       width: 85px;
-      height: 85px;
 
       img {
+        border-color: transparent;
         border-style: solid;
         border-width: 5px;
-        border-color: transparent;
-        object-fit: cover;
+        object-fit: contain;
       }
 
       &:last-child {
         margin-right: 0px;
+        margin-top: 0px;
+      }
+
+      @media #{$breakpoint-tablet} {
+        height: auto;
+        max-width: 100%;
       }
     }
 
     .selected {
-      border-style: solid;
       border-color: #4a90e2;
-      border-width: 5px;
       border-radius: 5px;
+      border-style: solid;
+      border-width: 5px;
     }
 
     .view {
       height: 85px;
-      object-fit: contain;
+      object-fit: cover;
       width: 85px;
 
-      @media only screen and (min-width:768px) {
-        height: 100px;
-        width: 100px;
+      @media #{$breakpoint-tablet} {
+        height: 70px;
+        object-fit: cover;
+        width: 70px;
       }
     }
 
-    @media only screen and (min-width:768px) {
-      display: inline-flex;
+    @media #{$breakpoint-tablet} {
+      display: flex;
       flex-direction: column;
+      height: 100%;
       justify-content: flex-start;
-      margin-right: 10px;
-      margin-top: 47px;
+      padding-top: 200px;
+      width: 150px;
     }
   }
 
-  @media only screen and (min-width:768px) {
-    display: inline-flex;
-    justify-content: flex-end;
+  @media #{$breakpoint-tablet} {
+    flex-direction: row;
+    height: 100%;
+    justify-content: space-between;
     width: 100%;
-  }
-}
-
-/**********************************************/
-
-.half-right {
-
-  @media only screen and (min-width:768px) {
-    display: block;
-    transform: translateY(15px);
-    width: 55%;
   }
 }
